some final fixes